--- a/snippet.scss/mixin.scss
+++ b/snippet.scss/mixin.scss
@@ -12,6 +12,8 @@
 }
 
 @mixin centerBlock( $marginTop: 0, $marginBottom: 0 ) {
+    margin-top: $marginTop;
+    margin-bottom: $marginBottom;
     margin-left: auto;
     margin-right: auto;
 }
