--- a/projekty/bright-light/scss/style.css
+++ b/projekty/bright-light/scss/style.css
@@ -69,29 +69,6 @@ html, body {
   width: 260px;
 }
 
-.animation {
-  position: relative;
-  transition: all .4s ease;
-  opacity: 0;
-}
-
-.animation__left--300 {
-  transform: translate(0, 40px);
-}
-
-.animation__right--100 {
-  transform: translate(0, 40px);
-}
-
-.animation__left--150 {
-  transform: translate(0, 40px);
-}
-
-.animationstart {
-  transform: translate(0, 0);
-  opacity: 1;
-}
-
 .animshow {
   -webkit-transform: translateX(0);
   transform: translateX(0);
@@ -107,8 +84,7 @@ html, body {
   position: absolute;
   left: 0;
   top: 0;
-  z-index: 10;
-  display: flex;
+  z-index: 990;
   width: 100%;
 }
 
@@ -125,6 +101,7 @@ html, body {
   font-size: 1.4rem;
   padding: 4.5rem 7rem 0 2rem;
   text-align: right;
+  z-index: 990;
 }
 
 .nav__linksbox a {
@@ -156,9 +133,15 @@ html, body {
   transition: all .2s;
 }
 
-.nav__linksbox > a:hover::after {
+.nav__linksbox > a:hover::after, .nav__linksbox > a.active::after {
   transform: translateY(0);
   opacity: 1;
+}
+
+.nav-stick .menu {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.75);
+  padding-bottom: 12px;
 }
 
 .nav__langbox {
@@ -257,6 +240,7 @@ html, body {
   background: -webkit-linear-gradient(left, #ff563f 0%, #fb5875 100%);
   background: linear-gradient(to right, #ff563f 0%, #fb5875 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff563f', endColorstr='#fb5875',GradientType=1 );
+  position: absolute;
   content: "";
   display: block;
   width: 60px;
@@ -268,14 +252,21 @@ html, body {
   transform: scaleX(0);
 }
 
-.decor-line.animationstart {
-  transform: scale(1);
-}
-
 .decor-line--left {
   transform: none;
   right: auto;
   margin: 0;
+}
+
+.show-elem {
+  transition: all .2s;
+  opacity: 0;
+  transform: translateY(30px);
+}
+
+.show-elem-end {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .scrollto {
@@ -743,9 +734,9 @@ html, body {
 
 #nav-btn {
   position: fixed;
-  right: 20px;
-  top: 20px;
-  z-index: 100;
+  right: 13px;
+  top: 14px;
+  z-index: 1000;
   background: none;
   border: 0;
   padding: 0;
@@ -765,6 +756,8 @@ html, body {
   }
   .menu {
     display: block;
+    height: 100%;
+    position: fixed;
   }
   .nav__linksbox {
     position: fixed;
@@ -772,8 +765,8 @@ html, body {
     top: 0;
     background: rgba(0, 0, 0, 0.85);
     width: 100%;
-    height: 100%;
-    z-index: 99;
+    height: 100vh;
+    z-index: 990;
     text-align: center;
     font-size: 2.3rem;
     box-sizing: border-box;
@@ -808,6 +801,9 @@ html, body {
 }
 
 @media only screen and (max-width: 768px) {
+  .header {
+    background-attachment: scroll;
+  }
   html {
     font-size: 6px;
   }
@@ -816,6 +812,7 @@ html, body {
   }
   .decor-line--left {
     margin: auto;
+    right: 0;
   }
   .decor-link--left {
     margin: 50px auto;
@@ -869,19 +866,36 @@ html, body {
   }
   .offer__bg {
     background-image: url(../images/offer-bg@600.jpg);
+    background: none;
   }
   .offer__icons {
     flex-direction: column;
   }
   .offer__ico {
-    width: 38%;
+    width: 60%;
     margin: 20px auto;
   }
   .slider-container {
-    width: 370px;
-    height: 217px;
+    width: 260px;
+    height: 153px;
     margin-left: auto;
     margin-right: auto;
+  }
+  .contact {
+    padding-top: 60px;
+  }
+  .contact::before {
+    display: none;
+  }
+  .contact input, .contact select, .contact textarea {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .contact__select svg {
+    right: 30px;
+  }
+  .w--30 {
+    width: 120%;
   }
 }
 /*# sourceMappingURL=style.css.map */
