--- a/projekty/bright-light/scss/style.css
+++ b/projekty/bright-light/scss/style.css
@@ -86,6 +86,7 @@ html, body {
   top: 0;
   z-index: 990;
   width: 100%;
+  transition: transform .3s ease;
 }
 
 .menu path {
@@ -758,6 +759,7 @@ html, body {
     display: block;
     height: 100%;
     position: fixed;
+    pointer-events: none;
   }
   .nav__linksbox {
     position: fixed;
@@ -793,6 +795,9 @@ html, body {
   }
   .opennav {
     overflow: hidden;
+  }
+  .opennav .menu {
+    pointer-events: auto;
   }
   .opennav .nav__linksbox {
     transform: translateX(0);
