Nowe podstrony Bright Lights

--- a/projekty/bright-light/scss/vars.scss
+++ b/projekty/bright-light/scss/vars.scss
@@ -36,4 +36,5 @@ $col: 8.33333333%;
 $decorationColor: #ff5641;
 $decorationColor2: #fd575b;
 $decorationColorLink: #fc5869;
+$decorationTeamHover: #e34f5f;
 $sectionPaddingTop: 130px;
