--- a/projekty/bright-light/scss/style.css
+++ b/projekty/bright-light/scss/style.css
@@ -344,6 +344,21 @@ html, body {
   font-size: 2rem;
 }
 
+.section-title--light {
+  color: #fff;
+  position: relative;
+  margin-bottom: 30px;
+  font-size: 3.5rem;
+}
+
+.section-title--light .decor-line {
+  bottom: -13px;
+}
+
+.section-title--small {
+  font-size: 2.7rem;
+}
+
 .list li {
   margin-bottom: 8px;
   list-style: none;
@@ -540,6 +555,10 @@ html, body {
   font-size: 1.3rem;
 }
 
+.ctn-top-space {
+  padding: 30px 0;
+}
+
 @-webkit-keyframes pulse {
   0% {
     transform: translate(-50%, 49%);
@@ -611,7 +630,7 @@ html, body {
   display: block;
   margin: 15px 0;
   width: 90%;
-  background: none;
+  background: #000;
   font-size: 1.5rem;
   border: 0;
   border-bottom: 2px solid #2b2b2b;
@@ -744,6 +763,10 @@ html, body {
   display: none;
 }
 
+.contact--line::before {
+  display: none;
+}
+
 @media only screen and (max-width: 960px) {
   #nav-btn {
     display: block;
@@ -863,6 +886,10 @@ html, body {
   .mtop160 {
     margin-top: 60px;
   }
+  input, select, textarea {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -891,10 +918,6 @@ html, body {
   }
   .contact::before {
     display: none;
-  }
-  .contact input, .contact select, .contact textarea {
-    margin-left: auto;
-    margin-right: auto;
   }
   .contact__select svg {
     right: 30px;
