--- a/projekty/bright-light/scss/style.scss
+++ b/projekty/bright-light/scss/style.scss
@@ -307,6 +307,21 @@ html, body {
     .small {
         font-size: 2rem;
     }
+
+    &--light {
+        color: #fff;
+        position: relative;
+        margin-bottom: 30px;
+        font-size: 3.5rem;
+
+        .decor-line {
+            bottom: -13px;
+        }
+    }
+
+    &--small {
+        font-size: 2.7rem;
+    }
 }
 
 .list {
@@ -508,6 +523,10 @@ html, body {
     }
 }
 
+
+.ctn-top-space {
+    padding: 30px 0;
+}
 // animacje
 
 @-webkit-keyframes pulse {
@@ -603,7 +622,7 @@ html, body {
         display: block;
         margin: 15px 0;
         width: 90%;
-        background: none;
+        background: #000;
         font-size: 1.5rem;
         border: 0;
         border-bottom: 2px solid #2b2b2b;
@@ -733,6 +752,12 @@ html, body {
     border: 0;
     padding: 0;
     display: none;
+}
+
+.contact--line {
+    &::before {
+        display: none;
+    }
 }
 
 
@@ -886,6 +911,11 @@ html, body {
         margin-top: 60px;
     }
 
+    input, select, textarea {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
 }
 
 // tablet 480px 
@@ -919,11 +949,6 @@ html, body {
         padding-top: 60px;
         &::before {
             display: none;
-        }
-
-        input, select, textarea {
-            margin-left: auto;
-            margin-right: auto;
         }
     }
 
