--- a/projekty/bright-light/scss/parts/team.css
+++ b/projekty/bright-light/scss/parts/team.css
@@ -169,6 +169,11 @@
   left: -65px;
 }
 
+.team__slider .prev.off, .team__slider .next.off {
+  opacity: .3;
+  pointer-events: none;
+}
+
 .team__slider .next {
   left: auto;
   right: -65px;
@@ -278,6 +283,39 @@
   }
   .team__slider-item {
     flex-direction: column;
+  }
+  .team__slider-item p {
+    margin-bottom: 12px;
+  }
+  .team-list__item {
+    flex-direction: column;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .team__slider {
+    padding: 25px 15px;
+  }
+  .team__slider .close {
+    top: 10px;
+    right: 10px;
+  }
+}
+
+@media only screen and (max-width: 568px) {
+  .team__slider__description {
+    margin: 12px auto;
+  }
+  .team-info__image {
+    flex: 0 1 80%;
+  }
+  .contact-item {
+    margin: 6px auto;
+  }
+  .contact-item svg {
+    transform: scale(0.6);
+  }
+  .contact-item a {
+    margin-left: 3px;
   }
 }
 /*# sourceMappingURL=team.css.map */
