--- a/projekty/bright-light/scss/style.css
+++ b/projekty/bright-light/scss/style.css
@@ -556,7 +556,8 @@ html, body {
 }
 
 .ctn-top-space {
-  padding: 30px 0;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 @-webkit-keyframes pulse {
